# Homegear-Kodi

./: .project  CMakeLists.txt  configure.ac  makeRelease.sh
debian/: changelog  control  copyright  postinst  postrm  rules
misc/: EASYLed.xml  EasyLedConfig.tcl
misc/Config Directory/: kodi.conf
misc/Device Description Files/: Kodi.xml
src/: Factory.cpp  Factory.h  GD.cpp  GD.h  Kodi.cpp  Kodi.h  KodiCentral.cpp  KodiCentral.h  KodiInterface.cpp  KodiInterface.h  KodiPacket.cpp  KodiPacket.h  KodiPeer.cpp  KodiPeer.h  Makefile.am  MyCentral.cpp  MyCentral.h  MyFamily.cpp  MyFamily.h  MyPacket.cpp  MyPacket.h  MyPeer.cpp  MyPeer.h
